feat: add mac and windows support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,7 +34,9 @@
     "markdown",
     "json",
     "jsonc",
+    "yml",
     "yaml",
+    "github-actions-workflow",
     "toml",
     "xml",
     "gql",
