--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "scripts": {
     "build": "pnpm build:lib",
     "build:lib": "rm -rf packages/*/*.{h,dylib,so,dll} && node scripts/build.js",
+    "publish": "pnpm publish:verifier && pnpm publish:libverifier",
+    "publish:verifier": "pnpm --filter='./packages/email-verifier' publish --no-git-checks --access public",
+    "publish:libverifier": "pnpm --filter='./lib/*' publish --no-git-checks --access public",
+    "pack:verifier": "pnpm -r --filter='./packages/email-verifier' exec pnpm pack --pack-destination=${PWD}/dist",
+    "pack:libverifier": "pnpm -r --filter='./lib/*' exec pnpm pack --pack-destination=${PWD}/dist",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
