--- a/lib/email-verifier-linux-arm-gnueabihf/package.json
+++ b/lib/email-verifier-linux-arm-gnueabihf/package.json
@@ -10,6 +10,11 @@
   "description": "@everyx/email-verifier shared library for linux arm gnueabihf",
   "author": "everyx",
   "license": "GPL-3.0-only",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/everyx/node-email-verifier",
+    "directory": "lib/email-verifier-linux-arm-gnueabihf"
+  },
   "main": "libemailverifier-linux-arm-gnueabihf.so",
   "files": [
     "libemailverifier-linux-arm-gnueabihf.so"
