--- a/lib/email-verifier-win32-x64-gnu/package.json
+++ b/lib/email-verifier-win32-x64-gnu/package.json
@@ -10,6 +10,11 @@
   "description": "@everyx/email-verifier shared library for win32 x64 gnu",
   "author": "everyx",
   "license": "GPL-3.0-only",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/everyx/node-email-verifier",
+    "directory": "email-verifier-win32-x64-gnu"
+  },
   "main": "libemailverifier-win32-x64-gnu.dll",
   "files": [
     "libemailverifier-win32-x64-gnu.dll"
