--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
-        if: ${{ inputs.component == 'libverifier' && github.event_name == 'workflow_call' }}
+        if: ${{ inputs.component == 'libverifier' }}
         with:
           pattern: build-lib-*
           merge-multiple: true
@@ -50,7 +50,9 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - run: pnpm pack:libverifier
+      - run: |
+          tree ./lib
+          pnpm pack:libverifier
         if: ${{ inputs.component == 'libverifier' && github.event_name == 'workflow_dispatch' }}
 
       - uses: actions/upload-artifact@v4
