ci: use the same version for monorepo
Release-As: 0.2.0

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,25 +5,24 @@ on:
   push:
     tags:
       - 'v*'
-      - 'libverifier-v*'
 
 jobs:
   build-lib-linux:
-    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && startsWith(github.ref_name, 'libverifier-v')) }}
+    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push') }}
     uses: ./.github/workflows/build-lib.yaml
     secrets: inherit
     with:
       os: ubuntu-latest
 
   build-lib-windows:
-    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && startsWith(github.ref_name, 'libverifier-v')) }}
+    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push') }}
     uses: ./.github/workflows/build-lib.yaml
     secrets: inherit
     with:
       os: windows-latest
 
   publish-lib:
-    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && startsWith(github.ref_name, 'libverifier-v')) }}
+    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push') }}
     needs: [build-lib-linux, build-lib-windows]
     uses: ./.github/workflows/publish.yaml
     secrets: inherit
@@ -31,7 +30,7 @@ jobs:
       component: libverifier
 
   publish:
-    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && !startsWith(github.ref_name, 'libverifier-v')) }}
+    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'push') }}
     uses: ./.github/workflows/publish.yaml
     secrets: inherit
     with:
