--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.9.2",
-    "eslint": "^9.15.0"
+    "@types/node": "^22.10.0",
+    "eslint": "^9.15.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.6"
   }
 }
