--- a/packages/email-verifier/tsconfig.json
+++ b/packages/email-verifier/tsconfig.json
@@ -1,20 +1,7 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es2020",
-    "lib": ["es2020"],
     "rootDir": ".",
-    "module": "node16",
-    "moduleResolution": "node16",
-    "resolveJsonModule": true,
-    "types": ["node"],
-    "strict": true,
-    "noImplicitAny": true,
-    "declaration": true,
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
-  },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+    "outDir": "./dist"
+  }
 }
