--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,8 +2,8 @@
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "bootstrap-sha": "d114ee2b004b977b53bf9c56302c73d64c01bb98",
   "release-type": "node",
-  "bump-minor-pre-major": false,
-  "bump-patch-for-minor-pre-major": false,
+  "bump-minor-pre-major": true,
+  "bump-patch-for-minor-pre-major": true,
   "packages": {
     ".": {
       "extra-files": [
