--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,6 +6,7 @@
   "bump-patch-for-minor-pre-major": true,
   "packages": {
     ".": {
+      "include-component-in-tag": false,
       "extra-files": [
         {
           "type": "json",
