--- a/packages/email-verifier/package.json
+++ b/packages/email-verifier/package.json
@@ -18,7 +18,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "dev": "tsc -w",
     "test": "vitest",
     "prepack": "npm run build"
