--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "build:lib": "rm -rf packages/*/*.{h,dylib,so,dll} && node scripts/build.js",
     "publish": "pnpm publish:verifier && pnpm publish:libverifier",
     "publish:verifier": "pnpm --filter='./packages/email-verifier' publish --no-git-checks --access public",
-    "publish:libverifier": "pnpm --filter='./lib/*' publish --no-git-checks --access public",
+    "publish:libverifier": "pnpm --filter='./packages/email-verifier-*' publish --no-git-checks --access public",
+    "pack": "pnpm pack:verifier & pnpm pack:libverifier",
     "pack:verifier": "pnpm -r --filter='./packages/email-verifier' exec pnpm pack --pack-destination=${PWD}/dist",
-    "pack:libverifier": "bash scripts/check-lib-exist.sh && pnpm -r --filter='./lib/*' exec pnpm pack --pack-destination=${PWD}/dist",
+    "pack:libverifier": "pnpm -r --filter='./packages/email-verifier-*' exec pnpm pack --pack-destination=${PWD}/dist",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
