--- a/packages/email-verifier-linux-arm-gnueabihf/package.json
+++ b/packages/email-verifier-linux-arm-gnueabihf/package.json
@@ -21,5 +21,8 @@
   ],
   "engines": {
     "node": ">= 12"
+  },
+  "scripts": {
+    "prepack": "bash -c 'test -f libemailverifier-linux-arm-gnueabihf.so'"
   }
 }
