--- a/packages/email-verifier-linux-arm64-musl/package.json
+++ b/packages/email-verifier-linux-arm64-musl/package.json
@@ -24,5 +24,8 @@
   },
   "libc": [
     "musl"
-  ]
+  ],
+  "scripts": {
+    "prepack": "bash -c 'test -f libemailverifier-linux-arm64-musl.so'"
+  }
 }
