--- a/packages/email-verifier-win32-ia32-gnu/package.json
+++ b/packages/email-verifier-win32-ia32-gnu/package.json
@@ -21,5 +21,8 @@
   ],
   "engines": {
     "node": ">= 12"
+  },
+  "scripts": {
+    "prepack": "bash -c 'test -f libemailverifier-win32-ia32-gnu.dll'"
   }
 }
