--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@antfu/eslint-config": "^3.12.1",
     "@types/node": "^22.10.0",
     "eslint": "^9.17.0",
-    "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
+    "unbuild": "^3.1.0",
     "vitest": "^2.1.8"
   }
 }
