--- a/packages/email-verifier/package.json
+++ b/packages/email-verifier/package.json
@@ -10,18 +10,24 @@
     "url": "git+https://github.com/everyx/node-email-verifier.git",
     "directory": "packages/email-verifier"
   },
-  "keywords": [],
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "README.md",
-    "dist"
+  "keywords": [
+    "email",
+    "verifier"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "unbuild",
     "dev": "tsc -w",
     "test": "vitest",
-    "prepack": "npm run build"
+    "prepack": "unbuild"
   },
   "dependencies": {
     "ffi-rs": "^1.1.1"
