--- a/packages/email-verifier/package.json
+++ b/packages/email-verifier/package.json
@@ -22,7 +22,9 @@
   },
   "main": "./dist/index.cjs",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "unbuild",
     "dev": "tsc -w",
@@ -30,7 +32,7 @@
     "prepack": "unbuild"
   },
   "dependencies": {
-    "ffi-rs": "^1.1.1"
+    "ffi-rs": "^1.3.0"
   },
   "optionalDependencies": {
     "@everyx/email-verifier-linux-arm-gnueabihf": "workspace:*",
